--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
-    - name: Install Rye
-      uses: ./
+    - uses: ./
       id: rye-installer
 
     - name: Show Rye version
